--- a/hello.html
+++ b/hello.html
@@ -4,11 +4,11 @@
 <meta charset="utf_8">
 <title>Formation GIT</title>
 <meta http-equiv="Content-Type" content="text/html;charset=utf_8">
-<link rel="stylesheet" href="design/style.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div>
+<div id="top_banner">
 
 Bivenue dans cette Formation GIT! 
 </div>
