--- a/hello.html
+++ b/hello.html
@@ -12,5 +12,9 @@
 
 Bivenue dans cette Formation GIT! 
 </div>
-
+<!-- recomponse-->
+<div>
+<h1>Mes recomponse</h1>
+<p> <img src="medaille.jpg"></p>	
+</div>
 </body>
