--- a/hello.html
+++ b/hello.html
@@ -17,4 +17,8 @@ Bivenue dans cette Formation GIT!
 <h1>Mes recomponse</h1>
 <p> <img src="medaille.jpg"></p>	
 </div>
+<div>
+<h1>Mes commandes</h1>
+<p> commande_1</p>	
+</div>
 </body>
