--- a/hello.html
+++ b/hello.html
@@ -14,7 +14,7 @@ Bivenue dans cette Formation GIT!
 </div>
 <!-- recomponse-->
 <div>
-<h1>Mes recomponse</h1>
+<h1>Mes recomponse de mabranch</h1>
 <p> <img src="medaille.jpg"></p>	
 </div>
 </body>
